--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <div class="title">
-        <h1>Hello World</h1>
+    <div class="">
+      <div class="typography-container">
+        <div class="background-shape"></div>
+        <div class="text">
+          <bold>ABD</bold><br />L CARS<br /><span>BID</span>
+        </div>
+        <div class="subtext">
+          FORMATION<br />
+          <span>An effective way to start a new habit</span>
+        </div>
       </div>
-      <div class="buttons-wrapper">
-        <button id="button-yes">Yes</button>
-        <button id="button-no">NO</button>
+      <div class="d-flex">
+        <div class="container-no">
+          <div class="btn-no" id="button-yes"><a href="#">Yes</a></div>
+        </div>
+        <div class="container">
+          <div class="btn" id="button-no"><a href="#">NO</a></div>
+        </div>
       </div>
       <div class="image-wrapper">
         <img src="" alt="" />
